# ChangeLog for net-misc/remmina-plugins
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/remmina-plugins/ChangeLog,v 1.8 2012/02/15 00:55:41 floppym Exp $

  15 Feb 2012; Mike Gilbert <floppym@gentoo.org>
  remmina-plugins-0.9.2-r1.ebuild:
  Adjust freerdp dep.

  23 Nov 2011; Markos Chandras <hwoarang@gentoo.org>
  remmina-plugins-9999.ebuild:
  Replace https with git protocol. Bug #391719

  18 Nov 2011; Markos Chandras <hwoarang@gentoo.org>
  remmina-plugins-9999.ebuild:
  Update git repo. Bug #390755 thanks to William Keaney <keaneyw@gmail.com>

  16 Nov 2011; Mike Gilbert <floppym@gentoo.org>
  remmina-plugins-0.9.2-r1.ebuild:
  Adjust dependency to avoid pulling in freerdp-1.0.

  30 Sep 2011; Markos Chandras <hwoarang@gentoo.org>
  remmina-plugins-0.9.2-r1.ebuild, remmina-plugins-9999.ebuild:
  Fix vnc dependencies. Thanks to Alexander Kozyrev <sequoiahead@gmail.com>.
  Bug #382083

*remmina-plugins-9999 (24 Jun 2011)

  24 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
  +remmina-plugins-9999.ebuild:
  Live ebuild thanks to Dan Weeks <dan@danweeks.net>. Bug #372443

*remmina-plugins-0.9.2-r1 (23 Jun 2011)

  23 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
  -remmina-plugins-0.9.2.ebuild, +remmina-plugins-0.9.2-r1.ebuild:
  Refactor nx logic. Thanks to Dan Weeks <dan@danweeks.net>. Bug #372257

*remmina-plugins-0.9.2 (22 Jan 2011)

  22 Jan 2011; Markos Chandras <hwoarang@gentoo.org>
  +remmina-plugins-0.9.2.ebuild, +metadata.xml:
  Initial commit. Bug #329377. Thanks to Rion <rion4ik@gmail.com> for the ebuild
