@@ -2,8 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <maintainer>
-<email>hwoarang@gentoo.org</email>
-<name>Markos Chandras</name>
+<email>maintainer-needed@gentoo.org</email>
 </maintainer>
 <use>
 <flag name="nx">Enable support for NX protocol</flag>
