@@ -6,10 +6,6 @@
 		<name>Tristan Heaven</name>
 	</maintainer>
 	<maintainer>
-		<email>hwoarang@gentoo.org</email>
-		<name>Markos Chandras</name>
-	</maintainer>
-	<maintainer>
 		<email>floppym@gentoo.org</email>
 		<name>Mike Gilbert</name>
 	</maintainer>
