@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/remmina-plugins
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/remmina-plugins/ChangeLog,v 1.8 2012/02/15 00:55:41 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/remmina-plugins/ChangeLog,v 1.9 2012/02/17 20:52:44 hwoarang Exp $
+
+  17 Feb 2012; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
+  remove myself from metadata
 
   15 Feb 2012; Mike Gilbert <floppym@gentoo.org>
   remmina-plugins-0.9.2-r1.ebuild:
